# gneauxghts

./: .gitignore  DESIGN.md  PRODUCT.md  README.md  SEMANTIC_BENCHMARK.md  forBrayToUnderstand.md  package.json  pnpm-lock.yaml  testing.md  tsconfig.json  vite.config.js
docs/: features.md  (+14 more)
src-tauri/: Cargo.toml  build.rs  tauri.bundle.conf.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: chat.rs  commands.rs  index.rs  lexical.rs  lib.rs  main.rs  note.rs  path_utils.rs  proposals.rs  search.rs  state.rs  sync.rs  test_support.rs  time.rs  vault_watcher.rs
src-tauri/src/ai/: approval_service.rs  block_ops.rs  block_segment.rs  mod.rs  provider.rs  remember_orchestrator.rs  secret_store.rs  store.rs
src-tauri/src/app/: catalog.rs  events.rs  mod.rs
src-tauri/src/commands/: asset_commands.rs  atlas_commands.rs  chat_commands.rs  forgotten_note_commands.rs  graph_commands.rs  index_bridge.rs  note_persistence.rs  note_session.rs  path_utils.rs  proposal_commands.rs  search_commands.rs  task_commands.rs  wikilink_commands.rs
src-tauri/src/repositories/: ai_repository.rs  connection.rs  mod.rs  semantic_repository.rs  ui_state_repository.rs  vault_repository.rs
src-tauri/src/semantic/: activity.rs  ann.rs  ann_core.rs  atlas.rs  atlas_labels.rs  chunking.rs  cluster.rs  db.rs  debug.rs  embed.rs  indexer.rs  mod.rs  note_ann.rs  related.rs  similarity.rs
src-tauri/src/services/: background_index_queue.rs  current_document.rs  mod.rs  note_service.rs  search_service.rs  settings_service.rs  task_service.rs
src-tauri/src/state/: config.rs  persistence.rs  task_projection.rs
src-tauri/src/sync/: client.rs  conflicts.rs  paths.rs  reconcile.rs  store.rs  watcher.rs
src-tauri/test-fixtures/: project-atlas.chunks.json  project-atlas.index.json  project-atlas.md  project-atlas.search-wording-changes.json
sync-server/: .env.example  Cargo.toml  README.md  docker-compose.yml
sync-server/src/: auth.rs  config.rs  db.rs  main.rs  routes.rs  state.rs
(+340 files in other folders)
