[package]
name = "gneauxghts"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "gneauxghts_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.11", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
blake3 = "1.5"
hnswlib-rs = "0.10"
leiden-rs = { version = "0.8.1", default-features = false, features = ["rayon"] }
ndarray = "0.17"
rayon = "1.10"
umap-rs = "0.4.5"
tantivy = "0.25"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls", "stream"] }
futures-util = "0.3"
rusqlite = { version = "0.32", features = ["bundled"] }
notify = "6.1"

[patch.crates-io]
corenn-kernels = { path = "vendor/corenn-kernels" }
